@@ -1,10 +1,14 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.416 2009-02-13 00:19:14 remko Exp $
+	$Id: ChangeLog,v 1.417 2009-02-13 03:25:24 guru Exp $
 -----------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------
 2009-02-15
 	* GMT 4.4.0 finalized and released
 -----------------------------------------------------------------------------------------
+
+2009-02-13	pwessel
+	* website/*:		Scripts and makefile modified to deal with new arrangement
+				of files in share/doc.  Simplified web site test and update.
 
 2009-02-13	remko
 	* share/doc:		New directory moved from www/gmt
